<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	
		<LinearLayout android:orientation="vertical" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		
			<LinearLayout android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/listing_name" />
				<EditText android:id="@+id/post_listing_name" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:layout_weight="1"/>
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/listing_price" />
				<EditText android:id="@+id/post_listing_price" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:layout_weight="1"/>
			</LinearLayout>
		
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/listing_description" />
			<EditText android:id="@+id/post_listing_description" android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:scrollbars="vertical" />
			
			<!-- The Image -->
			<ImageView android:id="@+id/post_listing_image"
				android:layout_width="300px"
				android:layout_height="300px"
				android:maxWidth="300px"
				android:maxHeight="300px"
				android:src="@drawable/default_thumbnail_image"
				android:scaleType="centerInside"
				android:adjustViewBounds="false"
				android:padding="5px"/>
				
			<LinearLayout android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				
				<Button android:id="@+id/post_listing_take_photo" 
				  	android:text="@string/take_photo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<Button android:id="@+id/post_listing_confirm" 
				  	android:text="@string/confirm"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>