<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<!-- The name -->
	<TextView android:id="@+id/event_details_name" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="5px" android:paddingTop="5px" />
	
	<!--  The price -->
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/listing_price" 
			android:paddingRight="5px" />
		<TextView android:id="@+id/event_details_price" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/unknown_price"
			android:layout_weight="1"/>
	</LinearLayout>

	<!-- The URL -->
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/webpage" 
			android:paddingRight="5px" />
		<TextView android:id="@+id/event_details_webpage" android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	
	<!-- The Description -->
	<TextView android:id="@+id/event_details_description" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
</LinearLayout>